# emoji-sheep-tag

./: .gitattributes  .gitignore  CLAUDE.md  deno.json  examples.txt  readme.md
.claude/: settings.json
.hooks/: .gitignore  pre-commit
client/: InstancedGroup.ts  autoJoin.ts  client.ts  connection.ts  controls.ts  data.ts  displayMode.ts  ecs.ts  errorOverlay.ts  flags.ts  flowers.ts  index.html  index.ts  isTauri.ts  local.ts  maps.ts  messageHandlers.test.ts  messageHandlers.ts  messaging.test.ts  messaging.ts  mouse.ts  ping.test.ts  ping.ts  pingStore.ts  rawMouse.ts  schemas.ts  shardConnection.test.ts  shardConnection.ts  supportsRawMouse.ts  suppressReactDevtools.ts  tauriBridge.ts  three.ts  types.d.ts  world.ts
notes/: audio.md  ideation.md  todo.md  ui.md  wolf roles.md
scripts/: analyzeTrace.ts  build.ts  buildMapManifest.ts  deploy.sh  dev.ts  processSoundAssets.ts  setup-tauri.sh  sync-windows.ts
server/: ContextManager.ts  Lobby.ts  client.ts  computerPlayer.ts  contexts.ts  ecs.ts  flyMachines.ts  hub.ts  index.ts  lobby.ts  lobbyApi.test.ts  lobbyApi.ts  lobbyMeta.ts  local.ts  maps.ts  shard.ts  shardRegistry.test.ts  shardRegistry.ts  statusStream.ts  updates.ts  watchdog.ts
shard/: Dockerfile.shard  fly.toml
shared/: constants.ts  context.ts  data.ts  dayNight.ts  map.test.ts  map.ts  penAreas.ts  round.ts  shard.ts  types.ts  version.ts  visibility.test.ts  visibility.ts  zod.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  raw_input.rs
testing/: setup.ts  utils.tsx
(+641 files in other folders)
