[package]
name = "emoji-sheep-tag"
version = "0.0.0"
edition = "2021"

[lib]
name = "emoji_sheep_tag_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
